<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.LoginFragment"
        android:label="@string/ScreenEnter"
        tools:layout="@layout/frag_login">
        <action
            android:id="@+id/action_loginFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.InstructionsFragment"
        android:label="@string/ScreenInstructions"
        tools:layout="@layout/frag_instructions" >

        <action
            android:id="@+id/action_instructionsFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/listProductsFragment"
        android:name="com.udacity.shoestore.ListProductsFragment"
        android:label="@string/ScreenList"
        tools:layout="@layout/frag_list_of_products" />
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.WelcomeFragment"
        android:label="@string/ScreenWelcome"
        tools:layout="@layout/frag_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_listProductsFragment"
            app:destination="@id/listProductsFragment" />
    </fragment>
</navigation>