<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".screens.LoginFragment"
    android:gravity="center"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        style="@style/buttonStyle"
        />

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="50dp"
        android:textColor="@color/secondaryLightColor"
        android:text="@string/registration" />


</LinearLayout>
</layout>